Fix bug responsive on home page: label for validating create station form overlap station browser (#102)

--- a/src/Pages/Home/Main/Main.scss
+++ b/src/Pages/Home/Main/Main.scss
@@ -8,14 +8,14 @@ $color-white: #fff;
 $font-title: 'Pacifico', sans-serif;
 .header {
   height: 100vh;
-  background-image: linear-gradient(
+  min-height: 700px;
+  background-size: cover;
+  background: linear-gradient(
       to right bottom,
       rgba($color-primary-light, 0.4),
       rgba($color-primary-dark, 0.6)
-    ),
-    url($background-image);
-  background-size: cover;
-  background-position: top;
+  ),
+  url($background-image) top;
   position: relative;
   &__text-box {
     position: absolute;
